[project]
name = "fastapi-dishka-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.6.0",
    "fastapi[standart]>=0.115.13",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.7",
    "uvicorn>=0.34.3",
]
